--- a/src/ui/style.css
+++ b/src/ui/style.css
@@ -119,11 +119,8 @@ main {
 }
 
 .upload-wrapper {
-    position: absolute;
+    position: fixed;
     transition: opacity 0.2s;
-}
-
-.upload-wrapper {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -135,12 +132,14 @@ main {
 
 .upload-wrapper.animated .btn {
     padding: 10px;
-    transition: padding 1s;
+    font-size: 15px;
+    min-width: 0;
+    transition: all 1s;
 }
 
 @keyframes animate {
     to {
-        top: 88%;
+        top: 80%;
         left: 1%;
         transform: translate(0, 0)
     }
